Added support for partial booking and search